--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h1 class="bold topp left" > $ ./Hacker-Theme.sh</h1>
       <h2></h2>
       <!-- gray text --->
-      <l class="gray left" >Hacker Themed HTML Template.</l>
+      <l class="gray left" >Gevorgus.</l>
       <br>
       <br>
       <!-- buttons -->
@@ -105,34 +105,6 @@
       </ol>
       
       <h6 class="left">Heading 6</h6>
-      
-      <table class="left">
-         <tr>
-            <th>Name</th>
-            <th class="left">Age</th>
-            <th class="left">Gender</th>
-         </tr>
-         <tr>
-            <td>Gev</td>
-            <td class="left">28</td>
-            <td class="left">Male</td>
-         </tr>
-         <tr>
-            <td>Tom</td>
-            <td class="left">25</td>
-            <td class="left">Male</td>
-         </tr>
-         <tr>
-            <td>Olivia</td>
-            <td class="left">Never Ask</td>
-            <td class="left">Female</td>
-         </tr>
-         <tr>
-            <td>This</td>
-            <td class="left">is a</td>
-            <td class="left">Table</td>
-         </tr>
-      </table>
       <h4 class="left">Look there is a horizontal rule below this.
       <!-- horizontal rule -->
       <hr class="hr">
