--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
    <body>
       <h2></h2>
       <!-- heading 1 -->
-      <h1 class="bold topp left" > $ ./Hacker-Theme.sh</h1>
+      <h1 class="bold topp left" > $ ./gevorgus.sh</h1>
       <h2></h2>
       <!-- gray text --->
-      <l class="gray left" >Gevorgus.</l>
+      <l class="gray left" >🌿🌿🌿.</l>
       <br>
       <br>
       <!-- buttons -->
